CREATE TABLE work_entry_entity
(
    entry_id         SERIAL PRIMARY KEY,
    user_id          INT  NOT NULL,
    sector_id        INT,
    work_date        DATE NOT NULL,
    duration         int,
    work_type        TEXT,
    description      TEXT,
    created_at       TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    day_salary       NUMERIC(10, 2),
    kilograms_picked int,
    is_paid          boolean   DEFAULT FALSE,


    CONSTRAINT fk_entry_user
        FOREIGN KEY (user_id)
            REFERENCES user_profile_entity (user_id),

    CONSTRAINT fk_entry_sector
        FOREIGN KEY (sector_id)
            REFERENCES sector_entity (sector_id)
);